--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,9 @@
   box-sizing: border-box;
 }
 body{
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Mulish', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
 }
 .header{
   display: flex;
@@ -11,6 +13,7 @@ body{
   padding-bottom: 20px;
   padding-left: 32px;
   padding-right: 70px;
+  margin-bottom: 30px;
 }
 .logo{
   margin-right: 59px;
@@ -49,6 +52,7 @@ body{
   width: 50%;
 }
 .input-search{
+  width: 100%;
   background: transparent;
   border: none;
   padding-top: 12px;
@@ -93,4 +97,45 @@ body{
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
+}
+.sidebar{
+  padding-left: 32px;
+}
+.nav-menu{
+  margin-top: 0;
+  margin-bottom: 60px;
+  padding-left: 0;
+  list-style: none;
+}
+.nav-item{
+  margin-bottom: 28px;
+}
+.nav-item .icon{
+  fill: #898989;
+}
+.nav-text{
+  margin-left: 13px;
+}
+.nav-link{
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: #898989;
+}
+.nav-link:hover{
+  color: #FF0000;
+}
+.nav-link:hover .icon{
+  fill: #FF0000;
+}
+.nav-image{
+  width: 26px;
+  height: 26px;
+  border-radius: 50%;
+}
+.nav-title{
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 23px;
+  margin-bottom: 30px;
 }
