--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,12 @@ body{
   padding-left: 32px;
   padding-right: 70px;
   margin-bottom: 30px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #fff;
+  z-index: 99;
 }
 .logo{
   margin-right: 59px;
@@ -99,7 +105,14 @@ body{
   -o-border-radius: 50%;
 }
 .sidebar{
+  position: fixed;
+  left: 0;
+  top: 114px;
+  height: calc(100% - 114px);
+  width: 12%;
+  overflow-y: auto;
   padding-left: 32px;
+  background: #fff;
 }
 .nav-menu{
   margin-top: 0;
@@ -138,4 +151,187 @@ body{
   font-size: 18px;
   line-height: 23px;
   margin-bottom: 30px;
+}
+
+.content{
+  margin-top: 85px;
+  width: 100%;
+  height: 400px;
+  padding-left: 13%;
+  padding-top: 30px;
+}
+.channel{
+  position: relative;
+  margin-bottom: 50px;
+}
+.channel-avatar{
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+.channel-title{
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: #19202C;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 33px;
+  margin-bottom: 30px;
+}
+.fooddrink-title{
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: #19202C;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 33px;
+}
+.channel-text{
+  margin-left: 20px;
+}
+h2.channel-text{
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 33px;
+  color: #19202C;
+  margin: 0;
+}
+.channel-button{
+  cursor: pointer;
+}
+.video-thumb{
+  position: relative;
+  width: 250px;
+  height: 150px;
+  overflow: hidden;
+  border-radius: 14px;
+  -webkit-border-radius: 14px;
+  -moz-border-radius: 14px;
+  -ms-border-radius: 14px;
+  -o-border-radius: 14px;
+}
+.recommended-thumb{
+  position: relative;
+  width: 540px;
+  height: 250px;
+  overflow: hidden;
+  border-radius: 14px;
+  -webkit-border-radius: 14px;
+  -moz-border-radius: 14px;
+  -ms-border-radius: 14px;
+  -o-border-radius: 14px;
+}
+.thumbnail{
+  width: 250px;
+  height: 150px;
+  object-fit: cover;
+}
+.thumbnail-recommend{
+  width: 540px;
+  height: 250px;
+  object-fit: cover;
+}
+.video-card{
+  width: 250px;
+}
+.recommended-card{
+  width: 540px;
+}
+.video-duration{
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  background: rgba(0,0,0,0.3);
+  border-radius: 12px;
+  font-size: 14px;
+  line-height: 18px;
+  color: #fff;
+  padding: 3px 9px;
+}
+.video-title{
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 20px;
+  color: #19202C;
+  margin-top: 10px;
+  margin-bottom: 4px;
+}
+.video-info{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 13px;
+  line-height: 16px;
+  color: #C2C2C2;
+}
+.recommended-info{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 12px;
+  line-height: 15px;
+  color: #C2C2C2;
+}
+.video-counter{
+  display: flex;
+  align-items: center;
+}
+.video-views{
+  margin-right: 5px;
+}
+.video-views::after{
+  content: '';
+  width: 2px;
+  height: 2px;
+  background-color: #C2C2C2;
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 5px;
+}
+.slider-buttons{
+  position: absolute;
+  right: 8%;
+  top: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 66px;
+}
+.channel-description{
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
+  color: #C2C2C2;
+  margin-left: 20px;
+}
+.wrap-fooddrink-title{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 87%;
+  margin-bottom: 30px;
+  margin-top: 60px;
+}
+.fooddrink-buttons{
+  display: flex;
+}
+.fooddrink-button{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 66px;
+}
+.fooddrink-button-subscribe{
+  margin-right: 40px;
+  padding: 10px 20px;
+  background: #FF0000;
+  border-radius: 20px;
+  border: none;
+  color: #fff;
 }
